track/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: track
  template:
    metadata:
      labels:
        app: track
    spec:
      containers:
        - name: track
          image: ghcr.io/pmh-only/dawarich:latest
          command:
            - web-entrypoint.sh
          args:
            - bin/rails
            - server
            - '-p'
            - '3000'
            - '-b'
            - '::'
          volumeMounts:
            - mountPath: /var/app/public
              name: track-pvc
              subPath: public
            - mountPath: /var/app/tmp/imports/watched
              name: track-pvc
              subPath: watched
            - mountPath: /var/app/storage
              name: track-pvc
              subPath: storage
            - mountPath: /dawarich_db_data
              name: track-pvc
              subPath: dawarich_db_data
      volumes:
        - name: track-pvc
          persistentVolumeClaim:
            claimName: track-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-sidekiq
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: track-sidekiq
  template:
    metadata:
      labels:
        app: track-sidekiq
    spec:
      containers:
        - name: track-sidekiq
          image: ghcr.io/pmh-only/dawarich:latest
          command:
            - sidekiq-entrypoint.sh
          args:
            - sidekiq
          volumeMounts:
            - mountPath: /var/app/public
              name: track-pvc
              subPath: public
            - mountPath: /var/app/tmp/imports/watched
              name: track-pvc
              subPath: watched
            - mountPath: /var/app/storage
              name: track-pvc
              subPath: storage
      volumes:
        - name: track-pvc
          persistentVolumeClaim:
            claimName: track-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-postgis
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: track-postgis
  template:
    metadata:
      labels:
        app: track-postgis
    spec:
      containers:
        - name: track-postgis
          image: ghcr.io/pmh-only/postgis:17-3.5-alpine
          volumeMounts:
            - mountPath: /var/shared
              name: track-pvc
              subPath: shared
            - mountPath: /var/lib/postgresql/data
              name: track-pvc
              subPath: dawarich_db_data
      volumes:
        - name: track-pvc
          persistentVolumeClaim:
            claimName: track-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-redis
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: track-redis
  template:
    metadata:
      labels:
        app: track-redis
    spec:
      containers:
        - name: track-redis
          image: ghcr.io/pmh-only/redis:alpine
          args:
            - redis-server
            - --save
            - '900'
            - '1'
            - --save
            - '300'
            - '10'
            - --appendonly
            - 'no'
          volumeMounts:
            - mountPath: /data
              name: track-pvc
              subPath: shared
      volumes:
        - name: track-pvc
          persistentVolumeClaim:
            claimName: track-pvc
