track/service.yml
apiVersion: v1
kind: Service
metadata:
  name: track-service
spec:
  selector:
    app: track
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: track-postgis-service
spec:
  selector:
    app: track-postgis
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: track-redis-service
spec:
  selector:
    app: track-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
